feat: add /spongEffects/getUmapProjection POST API endpoint
